--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.70",
     "@types/react": "^18.2.47",
+    "@types/react-bootstrap": "^0.32.35",
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.5",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.7",
